--- a/tests/fixtures/page.html
+++ b/tests/fixtures/page.html
@@ -1,3 +1,13 @@
-<!DOCTYPE html><html lang="ru">
-<head><meta charset="utf-8"><title>Курсы по программированию Хекслет</title></head>
-<body><img src="/images/python.png" alt="Иконка профессии Python-программист"/><img src="http://test.com/images/python.png" alt="Иконка профессии Python-программист"/><img alt="Without src"/></body></html>
+<!DOCTYPE html>
+<html lang="ru"><head>
+<meta charset="utf-8"><title>Курсы по программированию Хекслет</title>
+<link rel="stylesheet" media="all" href="/styles/app.css" />
+<link href="/courses" rel="canonical">
+</head>
+<body>
+<img src="/images/python.png" alt="Иконка профессии Python-программист"/>
+<img src="http://test.com/images/python.png" alt="Иконка профессии Python-программист"/>
+<img alt="Without src"/>
+<script src="/scripts/test.js"></script>
+
+</body></html>
