--- a/tests/fixtures/expected.html
+++ b/tests/fixtures/expected.html
@@ -10,6 +10,7 @@
  </head>
  <body>
   <img alt="Иконка профессии Python-программист" src="test-com_files/test-com-images-python.png">
+  <img alt="Иконка профессии Python-программист" src="test-com_files/test-com-images-h2is4x.png">
   <img alt="Without src">
   <script src="test-com_files/test-com-scripts-test.js">
   </script>
