--- a/tests/fixtures/page.html
+++ b/tests/fixtures/page.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <img src="/images/python.png" alt="Иконка профессии Python-программист"/>
+        <img src="http://test.com/images/python.png" alt="Иконка профессии Python-программист"/>
         <img alt="Without src"/>
         <script src="/scripts/test.js"></script>
     </body>
