--- a/tests/fixtures/expected.html
+++ b/tests/fixtures/expected.html
@@ -7,10 +7,11 @@
   </title>
   <link href="test-com_files/test-com-styles-app.css" media="all" rel="stylesheet">
   <link href="test-com_files/test-com-courses.html" rel="canonical">
+  <link href="test-com_files/test-com-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.html">
+  <link href="test-com_files/test-com-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaah2iS4x.html">
  </head>
  <body>
   <img alt="Иконка профессии Python-программист" src="test-com_files/test-com-images-python.png">
-  <img alt="Иконка профессии Python-программист" src="test-com_files/test-com-images-h2is4x.png">
   <img alt="Without src">
   <script src="test-com_files/test-com-scripts-test.js">
   </script>
